@@ -87,9 +87,6 @@ ElectromagnetPanel.currentSource    =Current Source
 ElectromagnetPanel.ac               =AC
 ElectromagnetPanel.dc               =DC
 
-# Turbine panel
-TurbinePanel.title                  =Turbine
-
 #-------------------------------------------------------------------------------
 # Graphical Objects
 #-------------------------------------------------------------------------------
