@@ -1,3 +1,4 @@
+#2246, change "Turbine" to "Bar Magnet" in Generator panel
 > Ported faraday to use ApparatusPanel3 to address canvas problems on low resolution screens, see #2860
 # 2.06.00 (51790) May 11, 2011
 > added new translation credits features
